# XML_Parser

./: CMakeLists.txt  Makefile  Readme.md  XML_Functions.cpp  XML_Functions.h  XML_Parser.cpp  XML_Parser.h  XML_Validator.cpp  XML_Validator.h  auto_tests.cpp  configure.bat  configure.sh  main.cpp  tests.xml
xml_files/: parsing_tests.xml  valid_file.xml  validity_tests.xml
